--- a/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
+++ b/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
@@ -1309,7 +1309,7 @@
         <item>
          <widget class="QTabWidget" name="BoundaryConditionsTabs">
           <property name="currentIndex">
-           <number>1</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="FixitiesTab">
            <attribute name="title">
@@ -1626,6 +1626,11 @@
                 <set>ItemIsDragEnabled|ItemIsUserCheckable</set>
                </property>
               </item>
+              <item row="0" column="1">
+               <property name="text">
+                <string>0</string>
+               </property>
+              </item>
               <item row="0" column="5">
                <property name="text">
                 <string>Constant</string>
@@ -1705,8 +1710,11 @@ Panel  for Member:</string>
               <property name="alternatingRowColors">
                <bool>true</bool>
               </property>
+              <attribute name="horizontalHeaderCascadingSectionResizes">
+               <bool>false</bool>
+              </attribute>
               <attribute name="horizontalHeaderDefaultSectionSize">
-               <number>55</number>
+               <number>80</number>
               </attribute>
               <row>
                <property name="text">
@@ -1889,77 +1897,137 @@ Panel  for Member:</string>
                 </font>
                </property>
               </column>
+              <item row="0" column="0">
+               <property name="text">
+                <string>1</string>
+               </property>
+               <property name="textAlignment">
+                <set>AlignCenter</set>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable</set>
+               </property>
+              </item>
+              <item row="0" column="3">
+               <property name="text">
+                <string>Constant</string>
+               </property>
+               <property name="checkState">
+                <enum>Checked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+               </property>
+              </item>
+              <item row="0" column="5">
+               <property name="text">
+                <string>Constant</string>
+               </property>
+               <property name="checkState">
+                <enum>Checked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+               </property>
+              </item>
+              <item row="0" column="7">
+               <property name="text">
+                <string>Constant</string>
+               </property>
+               <property name="checkState">
+                <enum>Checked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+               </property>
+              </item>
+              <item row="0" column="9">
+               <property name="text">
+                <string>Constant</string>
+               </property>
+               <property name="checkState">
+                <enum>Checked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+               </property>
+              </item>
+              <item row="0" column="11">
+               <property name="text">
+                <string>Constant</string>
+               </property>
+               <property name="checkState">
+                <enum>Checked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+               </property>
+              </item>
+              <item row="0" column="13">
+               <property name="text">
+                <string>Constant</string>
+               </property>
+               <property name="checkState">
+                <enum>Checked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+               </property>
+              </item>
+              <item row="0" column="15">
+               <property name="text">
+                <string>Constant</string>
+               </property>
+               <property name="checkState">
+                <enum>Checked</enum>
+               </property>
+               <property name="flags">
+                <set>ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled</set>
+               </property>
+              </item>
              </widget>
             </item>
             <item>
              <layout class="QGridLayout" name="gridLayout_8">
+              <item row="4" column="0" colspan="2">
+               <widget class="QPushButton" name="Apply_spring_copy">
+                <property name="maximumSize">
+                 <size>
+                  <width>150</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Apply</string>
+                </property>
+               </widget>
+              </item>
+              <item row="5" column="0">
+               <spacer name="verticalSpacer_4">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>20</width>
+                  <height>40</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
               <item row="1" column="0">
-               <widget class="QPushButton" name="Delete_last_row_spring">
-                <property name="minimumSize">
-                 <size>
-                  <width>0</width>
-                  <height>0</height>
-                 </size>
-                </property>
-                <property name="maximumSize">
-                 <size>
-                  <width>200</width>
-                  <height>16777215</height>
-                 </size>
+               <widget class="QLabel" name="Copy_stiffness_label">
+                <property name="frameShape">
+                 <enum>QFrame::StyledPanel</enum>
                 </property>
                 <property name="text">
-                 <string>Delete Last 
- Row</string>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="0">
-               <widget class="QPushButton" name="Delete_new_row_button_spring">
-                <property name="maximumSize">
-                 <size>
-                  <width>150</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Delete Row 
-Number</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="0">
-               <widget class="QPushButton" name="Insert_new_row_button_spring">
-                <property name="enabled">
-                 <bool>true</bool>
-                </property>
-                <property name="maximumSize">
-                 <size>
-                  <width>150</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Insert a New 
- Row After</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="0">
-               <widget class="QPushButton" name="Add_new_row_spring">
-                <property name="maximumSize">
-                 <size>
-                  <width>200</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Add New
- Row</string>
+                 <string>Copy Stiffness 
+ from:</string>
                 </property>
                </widget>
               </item>
               <item row="2" column="1">
-               <widget class="QLineEdit" name="Inser_number_spring">
+               <widget class="QLineEdit" name="Paste_number_spring">
                 <property name="maximumSize">
                  <size>
                   <width>50</width>
@@ -1977,8 +2045,20 @@ Number</string>
                 </property>
                </widget>
               </item>
-              <item row="3" column="1">
-               <widget class="QLineEdit" name="Delete_number_spring">
+              <item row="2" column="0">
+               <widget class="QLineEdit" name="Copy_number_spring">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                  <horstretch>30</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>90</width>
+                  <height>0</height>
+                 </size>
+                </property>
                 <property name="maximumSize">
                  <size>
                   <width>50</width>
@@ -1986,10 +2066,23 @@ Number</string>
                  </size>
                 </property>
                 <property name="text">
-                 <string>2</string>
+                 <string>1</string>
+                </property>
+                <property name="echoMode">
+                 <enum>QLineEdit::Normal</enum>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QLabel" name="Paste_stiffness_label">
+                <property name="frameShape">
+                 <enum>QFrame::StyledPanel</enum>
+                </property>
+                <property name="text">
+                 <string>Paste:</string>
                 </property>
                </widget>
               </item>
