--- a/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
+++ b/GUI dev/Try1_Oguzhan/Sabre2 GUI/SABRE2-V3.ui
@@ -2390,7 +2390,7 @@ Panel  for Member:</string>
            <attribute name="title">
             <string>Load Combinations</string>
            </attribute>
-           <layout class="QVBoxLayout" name="verticalLayout_7">
+           <layout class="QVBoxLayout" name="verticalLayout_6">
             <item>
              <layout class="QGridLayout" name="gridLayout_2">
               <item row="0" column="2">
@@ -2442,13 +2442,6 @@ Panel  for Member:</string>
                <widget class="QLabel" name="loadTypeLabel">
                 <property name="text">
                  <string>Name of Load Type:</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="4">
-               <widget class="QPushButton" name="loadTypeDelete">
-                <property name="text">
-                 <string>Delete</string>
                 </property>
                </widget>
               </item>
@@ -2554,28 +2547,62 @@ Panel  for Member:</string>
              </layout>
             </item>
             <item>
-             <widget class="QLabel" name="LoadCobinationNamesLabel">
-              <property name="text">
-               <string>Defined Load Combinations:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QScrollArea" name="LoadCombinationNames">
-              <property name="widgetResizable">
-               <bool>true</bool>
-              </property>
-              <widget class="QWidget" name="LCnamesContext">
-               <property name="geometry">
-                <rect>
-                 <x>0</x>
-                 <y>0</y>
-                 <width>1053</width>
-                 <height>75</height>
-                </rect>
-               </property>
-              </widget>
-             </widget>
+             <layout class="QGridLayout" name="gridLayout_7">
+              <item row="0" column="1">
+               <widget class="QLabel" name="LoadCobinationNamesLabel">
+                <property name="text">
+                 <string>Defined Load Combinations:</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="label">
+                <property name="text">
+                 <string>Defined Load Types:</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QPushButton" name="loadTypeDelete">
+                <property name="text">
+                 <string>Delete</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QListWidget" name="listWidget">
+                <item>
+                 <property name="text">
+                  <string>Dead Load (DL)</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Live Load (LL)</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Snow Load (SL)</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>Wind Load (WL)</string>
+                 </property>
+                </item>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QTreeWidget" name="treeWidget">
+                <column>
+                 <property name="text">
+                  <string notr="true">1</string>
+                 </property>
+                </column>
+               </widget>
+              </item>
+             </layout>
             </item>
            </layout>
           </widget>
